ensure image is square whilst also preventing it from being too tall
this was kind of difficult

hmm https://jsfiddle.net/SheepTester/vfc0s754/20/

--- a/src/styles/pages/StoreItemPage.module.scss
+++ b/src/styles/pages/StoreItemPage.module.scss
@@ -59,33 +59,40 @@
 }
 
 .imageContainer {
-  align-items: center;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   max-width: 37.5rem;
   width: 100%;
 
+  @media (max-width: vars.$breakpoint-md) {
+    max-width: 30rem;
+  }
+
   .coverContainer {
     aspect-ratio: 1/1;
-    background-color: var(--theme-surface-1);
-    border-radius: 1rem;
-    max-height: calc(100vh - 12rem);
-    overflow: hidden;
-    position: relative;
-    width: 100%;
+    display: flex;
+    max-height: min(calc(100vh - 12rem), 37.5rem);
+    max-width: 100%;
 
-    @media (max-width: vars.$breakpoint-md) {
-      max-width: 30rem;
-    }
+    .cover {
+      aspect-ratio: 1/1;
+      background-color: var(--theme-surface-1);
+      border-radius: 1rem;
+      height: 100%;
+      margin: 0 auto;
+      overflow: hidden;
+      position: relative;
 
-    img {
-      object-fit: contain;
+      img {
+        object-fit: contain;
+      }
     }
   }
 
   .images {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
     justify-content: center;
 
